# simo_project

./: .env.example  .gitignore  MONGODB_DATA_INFO.md  MONGODB_SETUP.md  README.md  docker-compose.yml  k8s-manifest.yaml  pyproject.toml
.claude/: settings.local.json
backend/app/: main.py
backend/app/models/: processing_types.py  schemas.py
backend/app/routes/: __init__.py  health.py  process.py  upload.py
backend/app/services/: data_processor.py  external_api.py  minio_service.py  processing_strategies.py
backend_process/: Dockerfile  requirements.txt
backend_process/app/: main.py
backend_process/app/config/: settings.py
backend_process/app/models/: __init__.py  processing_types.py  schemas.py
backend_process/app/routes/: __init__.py  process.py
backend_process/app/services/: __init__.py  data_processor.py  mongodb_service.py  processing_strategies.py
backend_type/: requirements.txt
backend_type/app/: main.py
backend_type/app/config/: settings.py
backend_type/app/models/: __init__.py
backend_upload/: requirements.txt
backend_upload/app/: main.py
frontend/: app.js  index.html  nginx.conf
k8s/: backend.yaml  frontend.yaml  resources.yaml
kong/: kong.yaml
mongodb_test_data/: CORP.json  CORP_ACCT.json  DANH_SACH_API_23.json  MONGODB_DATA_README.md  README.md  T24_T24CORE_ACCOUNT.json  T24_T24CORE_CUSTOMER.json  generate_mongodb_data.py  import_to_docker_mongodb.bat  import_to_docker_mongodb.sh  import_to_mongodb.bat  import_to_mongodb.sh
sample_data/: sample_upload.xlsx
scripts/: seed_mongodb.py
(+8 files in other folders)
