[project]
name = "vibe-coding"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Nguyen Trong Trung", email = "trungnt.os@mbv.com.vn" }
]
dependencies = [
    "fastapi>=0.118.2",
    "httpx>=0.28.1",
    "uvicorn[standard]>=0.37.0",
    "pymongo>=4.15.3",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
    "motor>=3.7.1",
    "minio>=7.2.18",
    "pandas>=2.3.3",
    "openpyxl>=3.1.5",
    "python-multipart>=0.0.20",
    "duckdb>=1.4.1",
    "loguru>=0.7.3",
    "faker>=37.11.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pymongo>=4.15.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/vibe_coding"]
